[package]
name = "cosmos-chain-registry"
description = "A crate for retrieving chain data from the Cosmos chain registry repo."
authors = ["Zack Kollar"]
version = "0.1.0"
edition = "2021"
license = "AGPLv3"
documentation = "https://docs.rs/cosmos-chain-registry/latest/cosmos-chain-registry/"
repository = "https://github.com/CronCats/cosmos-chain-registry"
readme = "README.md"

[dependencies]
git2 = "0.15.0"
glob = "0.3.0"
lazy_static = "1.4.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tracing = "0.1.37"

[dev-dependencies]
serial_test = "0.9.0"
